[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[dependencies]
log = "0.3"
rand = "0.3"
byteorder = "0.4"
mqtt3 = "0.1.3" # { path = "../mqtt3" }
netopt = {version = "0.1", git = "https://github.com/download13/rust-mq", rev = "80411122ffdb9d1f14394cfdde946e625efe1f2b", default-features = false} # { path = "../netopt" }

[dev-dependencies]
env_logger = "0.3"

[features]
default = ["ssl"]
ssl = ["netopt/ssl"]
