[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[dependencies]
log = "0.3"
rand = "0.3"
byteorder = "0.4"
mqtt3 = "0.1.3" # { path = "../mqtt3" }

[dev-dependencies]
env_logger = "0.3"

[dependencies.netopt]
version = "0.1"
git = "https://github.com/download13/rust-mq"
rev = "cbca9ed832d5282f77a61a7700361bdb5ea8143c"
default-features = false
# path = "../netopt"

[features]
default = ["ssl"]
ssl = ["netopt/ssl"]
