[package]
name = "mqttc"
version = "0.1.4"
authors = ["Maksim V. <inre.storm@gmail.com>"]
description = "Mqttc is a client for the MQTT protocol."
repository = "https://github.com/inre/rust-mq"
license = "MIT"

[dependencies]
log = "0.3"
rand = "0.3"
byteorder = "0.4"

[dev-dependencies]
env_logger = "0.3"

[dependencies.mqtt3]
path = "../mqtt3"
#git = "https://github.com/download13/rust-mq"
#rev = "9c07233b7eb78d4b287c8cde3d1d42afee93929e"

[dependencies.netopt]
#git = "https://github.com/download13/rust-mq"
#rev = "cbca9ed832d5282f77a61a7700361bdb5ea8143c"
default-features = false
path = "../netopt"

[features]
default = ["ssl"]
ssl = ["netopt/ssl"]
